# rpg-encoder

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
.rpg/: README.md  graph.json
crates/rpg-cli/: Cargo.toml
crates/rpg-cli/src/: main.rs
crates/rpg-cli/tests/: cli_integration.rs
crates/rpg-core/: Cargo.toml
crates/rpg-core/benches/: serialization.rs
crates/rpg-core/src/: config.rs  graph.rs  schema.rs  storage.rs
crates/rpg-core/tests/: graph_ops.rs  storage_roundtrip.rs
crates/rpg-encoder/: Cargo.toml
crates/rpg-encoder/src/: evolution.rs  grounding.rs  hierarchy.rs  lib.rs  lift.rs  semantic_lifting.rs
crates/rpg-encoder/tests/: evolution_test.rs  grounding_test.rs  incremental_test.rs  integration_fixture.rs
crates/rpg-mcp/: Cargo.toml
crates/rpg-mcp/src/: helpers.rs  main.rs  params.rs  server.rs  tools.rs  types.rs
crates/rpg-mcp/src/prompts/: hierarchy_instructions.md  server_instructions.md  synthesis_instructions.md
crates/rpg-mcp/tests/: tool_handlers.rs
crates/rpg-nav/: Cargo.toml
crates/rpg-nav/benches/: search.rs
crates/rpg-nav/src/: export.rs  lib.rs  search.rs  toon.rs
crates/rpg-nav/tests/: explore.rs  fetch.rs  search.rs
crates/rpg-parser/: Cargo.toml  build.rs
crates/rpg-parser/benches/: parsing.rs
crates/rpg-parser/src/: deps.rs  entities.rs  languages.rs  lib.rs  treesitter.rs
crates/rpg-parser/tests/: go_entities.rs  java_deps.rs
docs/: comparison.md
npm/: README.md  package.json
tests/fixtures/python_project/src/: main.py  models.py
(+2 files in other folders)
