[package]
name = "rpg-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core graph types and storage for Repository Planning Graph"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
toml.workspace = true
semver.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
serde_json.workspace = true

[[bench]]
name = "serialization"
harness = false

[lints]
workspace = true
